--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,33 @@
       rel="stylesheet"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      #myBtn {
+        display: none;
+        position: fixed;
+        top: 20px;
+        right: 30px;
+        /* z-index: 99; */
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: transparent;
+        color: white;
+        cursor: pointer;
+        /* padding: 15px; */
+        border-radius: 4px;
+      }
+
+      #myBtn:hover {
+        /* background-color: #555; */
+      }
+      @media screen and (max-width: 500px) {
+        .but {
+          display: none;
+          z-index: -99;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>
@@ -28,11 +55,39 @@
       >
     </noscript>
     <div id="app"></div>
+    <button onclick="topFunction()" id="myBtn" class="but" title="Go to top">
+      <img src="./up.png" alt="" />
+    </button>
     <!-- built files will be auto injected -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script>
+      var mybutton = document.getElementById("myBtn");
+
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 20
+        ) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
+        }
+      }
+
+      // When the user clicks on the button, scroll to the top of the document
+      function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+      }
+    </script>
   </body>
 </html>
